--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my first webpage</title>
+    <title>My First Webpage</title>
 </head>
 <body>
-    <h1>my bio</h1>
-    <p> my name is Chanel</p>
+    <h1>My bio</h1>
+    <p>My name is Chanel Ollague.</p>
 </body>
 </html>
